{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 51,
  "lineage": "dd99caaa-3716-0396-d361-635b546bdd54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9fd2583b3322571",
            "association_id": "eipassoc-032e9997c1faf62bc",
            "domain": "vpc",
            "id": "eipalloc-0c9fd2583b3322571",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-09c542ebac4751207",
            "private_dns": "ip-10-0-0-22.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.22",
            "public_dns": "ec2-18-140-39-63.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.39.63",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712183741199:internet-gateway/igw-0e06ff8dbafd725d8",
            "id": "igw-0e06ff8dbafd725d8",
            "owner_id": "712183741199",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc_id": "vpc-0cf80656416160338"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9fd2583b3322571",
            "connectivity_type": "public",
            "id": "nat-069b376a326f92a54",
            "network_interface_id": "eni-09c542ebac4751207",
            "private_ip": "10.0.0.22",
            "public_ip": "18.140.39.63",
            "subnet_id": "subnet-0dd082759ea762183",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.sn1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712183741199:route-table/rtb-0733436dd8cdb5fe3",
            "id": "rtb-0733436dd8cdb5fe3",
            "owner_id": "712183741199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e06ff8dbafd725d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-rt1"
            },
            "tags_all": {
              "Name": "vpc-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf80656416160338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712183741199:route-table/rtb-09e537bd9833ea4f3",
            "id": "rtb-09e537bd9833ea4f3",
            "owner_id": "712183741199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-069b376a326f92a54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-rt2"
            },
            "tags_all": {
              "Name": "vpc-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf80656416160338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.sn1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtasn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c28fa22e367f029",
            "route_table_id": "rtb-0733436dd8cdb5fe3",
            "subnet_id": "subnet-0dd082759ea762183"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.sn1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtasn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08299d41c4f23b4b5",
            "route_table_id": "rtb-09e537bd9833ea4f3",
            "subnet_id": "subnet-0d6a1125986a64bf9"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt2",
            "aws_subnet.sn1",
            "aws_subnet.sn2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712183741199:subnet/subnet-0dd082759ea762183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd082759ea762183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712183741199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc1-sn1"
            },
            "tags_all": {
              "Name": "vpc1-sn1"
            },
            "vpc_id": "vpc-0cf80656416160338"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712183741199:subnet/subnet-0d6a1125986a64bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a1125986a64bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712183741199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc1_sn2"
            },
            "tags_all": {
              "Name": "vpc1_sn2"
            },
            "vpc_id": "vpc-0cf80656416160338"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:712183741199:vpc/vpc-0cf80656416160338",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-01644343ec8c28ce1",
            "default_route_table_id": "rtb-02a684d5ba97c8cc8",
            "default_security_group_id": "sg-0ed809d78132546d3",
            "dhcp_options_id": "dopt-0b76b04d112f60fea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cf80656416160338",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a684d5ba97c8cc8",
            "owner_id": "712183741199",
            "tags": {
              "Name": "myvpc1"
            },
            "tags_all": {
              "Name": "myvpc1"
            }
          }
        }
      ]
    }
  ]
}